1.8.3.dev0
 * #743: Add a monitoring hook for sending backup status and logs to to Grafana Loki. See the
   documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/monitor-your-backups/#loki-hook
 * #753: When "archive_name_format" is not set, filter archives using the default archive name
   format.
 * #754: Fix error handling to log command output as one record per line instead of truncating
   too-long output and swallowing the end of some Borg error messages.
 * #757: Update documentation so "sudo borgmatic" works for pipx borgmatic installations.
 * #761: Fix for borgmatic not stopping Borg immediately when the user presses ctrl-C.
 * Update documentation to recommend installing/upgrading borgmatic with pipx instead of pip. See the
   documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/set-up-backups/#installation
   https://torsion.org/borgmatic/docs/how-to/upgrade/#upgrading-borgmatic

1.8.2
 * #345: Add "key export" action to export a copy of the repository key for safekeeping in case
   the original goes missing or gets damaged.
 * #727: Add a MariaDB database hook that uses native MariaDB commands instead of the deprecated
   MySQL ones. Be aware though that any existing backups made with the "mysql_databases:" hook are
   only restorable with a "mysql_databases:" configuration.
 * #738: Fix for potential data loss (data not getting restored) in which the database "restore"
   action didn't actually restore anything and indicated success anyway.
 * Remove the deprecated use of the MongoDB hook's "--db" flag for database restoration.
 * Add source code reference documentation for getting oriented with the borgmatic code as a
   developer: https://torsion.org/borgmatic/docs/reference/source-code/

1.8.1
 * #326: Add documentation for restoring a database to an alternate host:
   https://torsion.org/borgmatic/docs/how-to/backup-your-databases/#restore-to-an-alternate-host